Code Refactor : Change bedavaibility to bedavailable

--- a/ms-emergency/src/main/resources/application.properties
+++ b/ms-emergency/src/main/resources/application.properties
@@ -8,6 +8,6 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 com.medhead.msemergency.apiUrlHospital=http://localhost:9002
 
-com.medhead.msemergency.apiUrlBedAvaibility=http://localhost:9003
+com.medhead.msemergency.apiUrlBedAvailable=http://localhost:9003
 
 com.medhead.msemergency.apiUrlDistance=http://localhost:8989/route
