--- a/ms-bedavailable/pom.xml
+++ b/ms-bedavailable/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.medhead</groupId>
-	<artifactId>ms-bedavaibility</artifactId>
+	<artifactId>ms-bedavailable</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ms-bedavaibility</name>
+	<name>ms-bedavailable</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
