Code Feat : Add new proxy with ms-bedavailable to check the number of bed available by hospital id

--- a/ms-hospital/src/main/resources/application.properties
+++ b/ms-hospital/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.application.name=msbedavaibility
+spring.application.name=mshsopital
 
 server.port=9002
 
 logging.level.root=error
 logging.level.com.medhead=info
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+com.medhead.mshospital.apiUrlBedAvailable=http://localhost:9003
+
+com.medhead.mshospital.pathToHospitalJsonFile=classpath:src/main/resources/data/Hospitals.json
+
+com.medhead.mshospital.pathToSpecialtiesJsonFile=classpath:src/main/resources/data/Specialties.json
