--- a/ms-emergency/src/main/resources/application.properties
+++ b/ms-emergency/src/main/resources/application.properties
@@ -11,3 +11,5 @@ com.medhead.msemergency.apiUrlHospital=http://localhost:9002
 com.medhead.msemergency.apiUrlBedAvailable=http://localhost:9003
 
 com.medhead.msemergency.apiUrlDistance=http://localhost:8989/route
+
+com.medhead.msemergency.apiUrlAuthorization=http://localhost:9004
