Code Fix : Code correction following anomalies.

--- a/ms-hospital/src/main/resources/application.properties
+++ b/ms-hospital/src/main/resources/application.properties
@@ -8,6 +8,6 @@ logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 com.medhead.mshospital.apiUrlBedAvailable=http://localhost:9003
 
-com.medhead.mshospital.pathToHospitalJsonFile=classpath:src/main/resources/data/Hospitals.json
+com.medhead.mshospital.pathToHospitalsJsonFile=/ms-hospital/src/main/resources/data/Hospitals.json
 
-com.medhead.mshospital.pathToSpecialtiesJsonFile=classpath:src/main/resources/data/Specialties.json
+com.medhead.mshospital.pathToSpecialtiesJsonFile=/ms-hospital/src/main/resources/data/Specialties.json
