--- a/ms-bedavailable/pom.xml
+++ b/ms-bedavailable/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.medhead</groupId>
+		<artifactId>poc_medhead</artifactId>
+		<version>0.0.1-SNAPSHOT</version><!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.medhead</groupId>
 	<artifactId>ms-bedavailable</artifactId>
