Code Feat : Add sonar in pom.xml of poc_medhead

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>poc_medhead</name>
     <packaging>pom</packaging>
-
+    <properties>
+        <sonar.organization>loic</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
