--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,9 +39,11 @@ jobs:
       #Run Tests
       - name: Run Tests
         run: mvn -B test --file ms-emergency/pom.xml
+
   #Sonar's Job
   sonar:
-    name: Build and analyze
+    needs: tests
+    name: SonarCloud analysis
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
