--- a/ms-bedavailable/pom.xml
+++ b/ms-bedavailable/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.medhead</groupId>
 	<artifactId>ms-bedavailable</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>ms-bedavailable</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -52,6 +52,13 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
