--- a/ms-emergency/pom.xml
+++ b/ms-emergency/pom.xml
@@ -11,6 +11,7 @@
 	<artifactId>ms-emergency</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-emergency</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -71,8 +72,14 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
