--- a/ms-hospital/pom.xml
+++ b/ms-hospital/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>ms-hospital</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ms-hospital</name>
+	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -60,6 +61,13 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
