--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -76,6 +76,9 @@ jobs:
     needs: sonar
     name: Build package
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -131,3 +134,8 @@ jobs:
       with:
         name: github-actions-artifact
         path: staging
+    - name: Publish package
+      run: mvn --batch-mode deploy -Dmaven.test.skip  
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}    
+  
