--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,11 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/LoicPi/POC_MedHead</url>
+        </repository>
+    </distributionManagement>
 </project>
