--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -137,5 +137,5 @@ jobs:
     - name: Publish package
       run: mvn --batch-mode deploy -Dmaven.test.skip  
       env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}    
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
   
