--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Create folder report_test
         run: mkdir report_test
       - name: Copy report test in report_test
-        run: cp ms-emergency/target/site/jacoco/jacoco-resources report_test
+        run: cp -r ms-emergency/target/site/jacoco/jacoco-resources report_test
       - run: cp ms-emergency/target/site/jacoco report_test
       - run: cp ms-hospital/target/site/jacoco/index.html report_test
       - run: cp ms-bedavailable/target/site/jacoco/index.html report_test
